--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td> <img src="C:\Users\josh\Desktop\WebStuff\ANGELA\Web Development\HTML - Personal Site\images\me.jpg" alt="A picture of my studio"></td>
+      <td> <img src="images\me.jpg" alt="A picture of my studio"></td>
       <td>
         <p><em>Founder of <strong><a href="https://247ariya.com/download-music-maazi-waters-self-crush/">CraftedtunesEnt</a></strong></em></p>
         <p>
